fix card height on smaller viewports

--- a/assets/styles.less
+++ b/assets/styles.less
@@ -1722,6 +1722,10 @@
       .display-flex;
       .flex-direction(column);
     }
+
+    .mikiop-card {
+      height: auto;
+    }
   }
 }
 
